--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "ts-node-dev --respawn --transpileOnly ./index.ts"
+    "start:dev": "ts-node-dev --respawn --transpile-only ./index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chalk": "^2.2.0",
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.23",
     "ts-node-dev": "^1.0.0-pre.51",
@@ -17,6 +18,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.15.1",
+    "chalk": "^4.1.0",
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
